# metadata-slideshow-helper

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  docker-compose.yml  hacs.json  pyproject.toml
.github/workflows/: pre-commit.yaml  validate-hacs.yaml  validate-hassfest.yaml
custom_components/metadata_slideshow_helper/: __init__.py  api.py  config_flow.py  const.py  helper.py  http.py  image.py  manifest.json  scanner.py  sensor.py  strings.json
custom_components/slideshow_helper/: __init__.py  config_flow.py  const.py  hacs.json  helper.py  http.py  image.py  manifest.json  scanner.py  sensor.py  services.yaml  strings.json
docs/: architecture.md  dev-setup.md  requirements.md
docs/dev_diary/: 2025-12-22-project-cleanup.md  2025-12-23-fix-filtering.md  6-clean-up-entities.md
tests/: __init__.py  conftest.py  image_generator.py  test_fixtures.py  test_metadata_slideshow_helper.py  test_slideshow_helper.py
