[project]
name = "hass-slideshow"
version = "0.2.1" # NOTE: Should be in sync with manifest.json
requires-python = ">=3.13"

[project.optional-dependencies]
dev = ["ruff", "mypy", "homeassistant-stubs", "pre-commit"]
test = ["pytest>=8.0", "pytest-asyncio>=0.23", "Pillow>=10.0", "piexif>=1.1", "exifread>=3.5.1", "defusedxml>=0.7"]

[tool.ruff]
line-length = 100
src = ["custom_components"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "PL", "RUF"]  # broad coverage incl. pyupgrade/bugbear
ignore = ["E501"]  # line length delegated to formatter

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
ignore_missing_imports = true
namespace_packages = true
